# FFclustering

./: CMakeLists.txt  README.md
points/: point4000_200x200_1.pt  point4000_200x200_10.pt  point4000_200x200_2.pt  point4000_200x200_3.pt  point4000_200x200_4.pt  point4000_200x200_5.pt  point4000_200x200_6.pt  point4000_200x200_7.pt  point4000_200x200_8.pt  point4000_200x200_9.pt
src/: Painter.cpp  Painter.h  cluster.cpp  cluster.h  clustering.cpp  compare.cpp  compare.h  data.cpp  data.h  db.cpp  db.h  main.cpp  painter.cpp
src/pointgen/: main.py  pointGeneration.py
